Fixed some layout issues
Dirty solution for IE8 < place footer on top of page

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -180,7 +180,6 @@ a.accesskey:focus {
 	text-align: center;
 	font-family:Arial, Verdana,Helvetica,sans-serif;
 	color:#4E443C;
-	font-variant: small-caps; 
 	text-transform: none; 
 	font-weight: 100; 
 	margin-bottom: 0;
@@ -264,7 +263,7 @@ html.js #cbslogo {
 	position:absolute;
 	width:100%;
 	background-color: #fff;
-	height:60px;
+	height:44px;
 	bottom:0;
 	left:0;
 }
@@ -619,7 +618,7 @@ a.olControlZoomOut {
 }
 
 #inhoud { 
-	padding:76px 0px 60px; /* padding for header/footer/copyright/download link, used in Viewer.js */	
+	padding:76px 0px 44px; /* padding for header/footer/copyright/download link, used in Viewer.js */	
 }
 
 #legendaContainer {
